OP-149 Added missing bundles (5 new commons)
TODO: to apply new commons in the whole application

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -283,11 +283,14 @@ angal.common.emailmustbevalid                                                   
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = من
 angal.common.hours                                                               = Hours
-angal.common.minutes                                                             = Minutes
+angal.common.minutes                                                             = الدقائق
+angal.common.minutesabbr                                                         = الدقائق
 angal.common.new                                                                 = جديد
 angal.common.notapplicable                                                       = N/A
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
+angal.common.patientID                                                           = رقم تعريف المريض
+angal.common.pleaseselectapatient                                                = الرجاء اختيار المريض
 angal.common.pleaseselectarow                                                    = يرجى اختيار صف
 angal.common.quantity                                                            = كمية
 angal.common.save                                                                = حفظ
@@ -296,6 +299,8 @@ angal.common.thiscouldretrievealargeamountofdataproceed                         
 angal.common.thisvaluecannotbegreaterthan                                        = لا يمكن أن تكون هذه القيمة أكبر من 
 angal.common.thisvaluecannotbelesserthan                                         = لا يمكن أن تكون هذه القيمة أقل من 
 angal.common.to                                                                  = إلى
+angal.common.today                                                               = اليوم
+angal.common.todaym                                                              = اليوم:
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
 angal.common.uom.centimeter                                                      = cm
@@ -743,7 +748,7 @@ angal.medicalstock.multipledischarging.outofstock                               
 angal.medicalstock.multipledischarging.packets                                   = Packets
 angal.medicalstock.multipledischarging.pleaseinsertareferencenumber              = Please insert a reference number
 angal.medicalstock.multipledischarging.pleaseinsertavalidvalue                   = إدراج قيمة صالحة
-angal.medicalstock.multipledischarging.pleaseselectaward                         = please select a ward
+angal.medicalstock.multipledischarging.pleaseselectaward                         = الرجاء تحديد جناح
 angal.medicalstock.multipledischarging.preparationdate                           = Preparation Date:
 angal.medicalstock.multipledischarging.proceed                                   = , proceed?
 angal.medicalstock.multipledischarging.qty                                       = الكمية
@@ -1699,6 +1704,8 @@ angal.video.resumestream                                                        
 angal.video.setfullscreen                                                        = تعيين وضع ملء الشاشة
 angal.video.shootaphoto                                                          = التقاط صورة
 angal.visit.reminderm                                                            = REMINDER
+angal.visit.selectaward                                                          = اختر جناح
+angal.visit.visits                                                               = زيارات
 angal.ward.beds                                                                  = الاسرة
 angal.ward.bedsedit                                                              = عدد الأسرة *
 angal.ward.bedsnumbermustbepositive                                              = عدد الاسرة يجب ان يكون رقم موجب
