--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -281,11 +281,14 @@ angal.common.emailmustbevalid                                                   
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = Seit
 angal.common.hours                                                               = Hours
-angal.common.minutes                                                             = Minutes
+angal.common.minutes                                                             = Minuten
+angal.common.minutesabbr                                                         = Min
 angal.common.new                                                                 = Neu
 angal.common.notapplicable                                                       = N/A
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
+angal.common.patientID                                                           = Pat.ID
+angal.common.pleaseselectapatient                                                = Bitte wählen Sie einen Patienten
 angal.common.pleaseselectarow                                                    = Bitte eine Zeile auswählen
 angal.common.quantity                                                            = Menge
 angal.common.save                                                                = Speichern
@@ -294,6 +297,8 @@ angal.common.thiscouldretrievealargeamountofdataproceed                         
 angal.common.thisvaluecannotbegreaterthan                                        = Dieser wert kann nicht größer als sein 
 angal.common.thisvaluecannotbelesserthan                                         = Dieser wert darf nicht kleiner sein als 
 angal.common.to                                                                  = To
+angal.common.today                                                               = Today
+angal.common.todaym                                                              = TODAY:
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
 angal.common.uom.centimeter                                                      = cm
@@ -736,7 +741,7 @@ angal.medicalstock.multipledischarging.outofstock                               
 angal.medicalstock.multipledischarging.packets                                   = Packets
 angal.medicalstock.multipledischarging.pleaseinsertareferencenumber              = Please insert a reference number
 angal.medicalstock.multipledischarging.pleaseinsertavalidvalue                   = Geben Sie einen gültigen Wert ein.
-angal.medicalstock.multipledischarging.pleaseselectaward                         = please select a ward
+angal.medicalstock.multipledischarging.pleaseselectaward                         = Bitte wählen Sie eine Station
 angal.medicalstock.multipledischarging.preparationdate                           = Preparation Date:
 angal.medicalstock.multipledischarging.proceed                                   = , proceed?
 angal.medicalstock.multipledischarging.qty                                       = Qty
@@ -826,7 +831,7 @@ angal.medicalstockward.rectify.reason                                           
 angal.medicalstockward.rectify.title                                             = Rectify
 angal.medicalstockward.report                                                    = Report
 angal.medicalstockward.reset                                                     = Reset
-angal.medicalstockward.selectaward                                               = <select a ward>
+angal.medicalstockward.selectaward                                               = <bitte wählen Sie eine Station>
 angal.medicalstockward.sex                                                       = Geschlecht
 angal.medicalstockward.stockcard                                                 = StockCard
 angal.medicalstockward.title                                                     = WardPharmacy
@@ -1674,6 +1679,8 @@ angal.video.resumestream                                                        
 angal.video.setfullscreen                                                        = Set fullscreen mode
 angal.video.shootaphoto                                                          = Take a picture
 angal.visit.reminderm                                                            = REMINDER
+angal.visit.selectaward                                                          = Bitte wählen Sie eine Station
+angal.visit.visits                                                               = Visits
 angal.ward.beds                                                                  = Betten
 angal.ward.bedsedit                                                              = Anzahl Betten*
 angal.ward.bedsnumbermustbepositive                                              = Die Anzahl der Betten muss größer als 0 sein!
