--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -288,11 +288,14 @@ angal.common.excel                                                              
 angal.common.from                                                                = From
 angal.common.hours                                                               = Hours
 angal.common.minutes                                                             = Minutes
+angal.common.minutesabbr                                                         = Min
 angal.common.new                                                                 = New
 angal.common.nodatatoshow                                                        = No data to show
 angal.common.notapplicable                                                       = N/A
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
+angal.common.patientID                                                           = Pat.ID
+angal.common.pleaseselectapatient                                                = Please select a patient
 angal.common.pleaseselectarow                                                    = Please select a row
 angal.common.print                                                               = Print
 angal.common.quantity                                                            = Quantity
@@ -302,6 +305,8 @@ angal.common.thiscouldretrievealargeamountofdataproceed                         
 angal.common.thisvaluecannotbegreaterthan                                        = This value cannot be greater than 
 angal.common.thisvaluecannotbelesserthan                                         = This value cannot be lesser than 
 angal.common.to                                                                  = To
+angal.common.today                                                               = Today
+angal.common.todaym                                                              = TODAY:
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = C
 angal.common.uom.centimeter                                                      = cm
@@ -768,7 +773,7 @@ angal.medicalstock.multipledischarging.outofstock                               
 angal.medicalstock.multipledischarging.packets                                   = Packets
 angal.medicalstock.multipledischarging.pleaseinsertareferencenumber              = Please insert a reference number
 angal.medicalstock.multipledischarging.pleaseinsertavalidvalue                   = Insert a valid value
-angal.medicalstock.multipledischarging.pleaseselectaward                         = please select a ward
+angal.medicalstock.multipledischarging.pleaseselectaward                         = Please select a ward
 angal.medicalstock.multipledischarging.pleaseselectpatient                       = please select a Patient
 angal.medicalstock.multipledischarging.preparationdate                           = Preparation Date:
 angal.medicalstock.multipledischarging.proceed                                   = , proceed?
@@ -1762,9 +1767,14 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Resume stream
 angal.video.setfullscreen                                                        = Set fullscreen mode
 angal.video.shootaphoto                                                          = Take a picture
+angal.visit.gotodate                                                             = Go to date
+angal.visit.nextabbr                                                             = Next
+angal.visit.previousabbr                                                         = Prev.
+angal.visit.printthisday                                                         = Print this day's visits
 angal.visit.reminderm                                                            = REMINDER
+angal.visit.selectaward                                                          = Select a ward
 angal.visit.visitfor                                                             = Visits for
-angal.visit.visittoday                                                           = Print this day's visits
+angal.visit.visits                                                               = Visits
 angal.visit.visittomorrow                                                        = Visits Tomorrow
 angal.ward.beds                                                                  = BEDS
 angal.ward.bedsedit                                                              = Number of beds *
