--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -282,10 +282,13 @@ angal.common.excel                                                              
 angal.common.from                                                                = De
 angal.common.hours                                                               = Horas
 angal.common.minutes                                                             = Minutos
+angal.common.minutesabbr                                                         = Min
 angal.common.new                                                                 = Novo
 angal.common.notapplicable                                                       = N/A
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
+angal.common.patientID                                                           = ID.Pac.
+angal.common.pleaseselectapatient                                                = Por favor, selecione um paciente
 angal.common.pleaseselectarow                                                    = Por favor, selecione uma linha
 angal.common.quantity                                                            = Quantidade
 angal.common.save                                                                = Salvar
@@ -294,6 +297,8 @@ angal.common.thiscouldretrievealargeamountofdataproceed                         
 angal.common.thisvaluecannotbegreaterthan                                        = Este valor não pode ser maior que 
 angal.common.thisvaluecannotbelesserthan                                         = Este valor não pode ser menor que 
 angal.common.to                                                                  = Para
+angal.common.today                                                               = Hoje
+angal.common.todaym                                                              = HOJE:
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
 angal.common.uom.centimeter                                                      = cm
@@ -734,7 +739,7 @@ angal.medicalstock.multipledischarging.outofstock                               
 angal.medicalstock.multipledischarging.packets                                   = Packets
 angal.medicalstock.multipledischarging.pleaseinsertareferencenumber              = Por favor, insira um número de referência
 angal.medicalstock.multipledischarging.pleaseinsertavalidvalue                   = Insira um valor válido
-angal.medicalstock.multipledischarging.pleaseselectaward                         = por favor, selecione uma ala
+angal.medicalstock.multipledischarging.pleaseselectaward                         = Por favor, selecione uma ala
 angal.medicalstock.multipledischarging.preparationdate                           = Data de preparação:
 angal.medicalstock.multipledischarging.proceed                                   = , proceder?
 angal.medicalstock.multipledischarging.qty                                       = Qty
@@ -1672,6 +1677,8 @@ angal.video.resumestream                                                        
 angal.video.setfullscreen                                                        = Modo de ecrã completo conjunto
 angal.video.shootaphoto                                                          = Tirar uma foto
 angal.visit.reminderm                                                            = LEMBRETE
+angal.visit.selectaward                                                          = Selecione uma ala
+angal.visit.visits                                                               = Visitas
 angal.ward.beds                                                                  = CAMAS
 angal.ward.bedsedit                                                              = Número de camas *
 angal.ward.bedsnumbermustbepositive                                              = Número de leitos deve ser positivo
