--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -282,10 +282,13 @@ angal.common.excel                                                              
 angal.common.from                                                                = Kutoka
 angal.common.hours                                                               = Masaa
 angal.common.minutes                                                             = Dakika
+angal.common.minutesabbr                                                         = Dak
 angal.common.new                                                                 = Mpya
 angal.common.notapplicable                                                       = N/A
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = Sawa
+angal.common.patientID                                                           = Mgonjwa.ID
+angal.common.pleaseselectapatient                                                = Tafadhali chagua mgonjwa
 angal.common.pleaseselectarow                                                    = Tafadhali chagua msururu
 angal.common.quantity                                                            = Wingi
 angal.common.save                                                                = Hifadhi
@@ -294,6 +297,8 @@ angal.common.thiscouldretrievealargeamountofdataproceed                         
 angal.common.thisvaluecannotbegreaterthan                                        = Thamani hii haiwezi kuwa kubwa kuliko 
 angal.common.thisvaluecannotbelesserthan                                         = Thamani hii haiwezi kuwa ndogo kuliko 
 angal.common.to                                                                  = kwa
+angal.common.today                                                               = Leo
+angal.common.todaym                                                              = LEO:
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
 angal.common.uom.centimeter                                                      = cm
@@ -734,7 +739,7 @@ angal.medicalstock.multipledischarging.outofstock                               
 angal.medicalstock.multipledischarging.packets                                   = Packets
 angal.medicalstock.multipledischarging.pleaseinsertareferencenumber              = Please insert a reference number
 angal.medicalstock.multipledischarging.pleaseinsertavalidvalue                   = weka Dhamani sahihi
-angal.medicalstock.multipledischarging.pleaseselectaward                         = please select a ward
+angal.medicalstock.multipledischarging.pleaseselectaward                         = Tafadhali chagua wodi
 angal.medicalstock.multipledischarging.preparationdate                           = Preparation Date:
 angal.medicalstock.multipledischarging.proceed                                   = , proceed?
 angal.medicalstock.multipledischarging.qty                                       = Kiasi
@@ -1671,6 +1676,8 @@ angal.video.resumestream                                                        
 angal.video.setfullscreen                                                        = Weka hali ya skrini nzima
 angal.video.shootaphoto                                                          = Piga picha
 angal.visit.reminderm                                                            = REMINDER
+angal.visit.selectaward                                                          = Chagua iadara
+angal.visit.visits                                                               = Chunguzi
 angal.ward.beds                                                                  = VITANDA
 angal.ward.bedsedit                                                              = Namba ya vitanda *
 angal.ward.bedsnumbermustbepositive                                              = Namba ya vitanda iwe ahakika
