--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -287,10 +287,13 @@ angal.common.excel                                                              
 angal.common.from                                                                = De
 angal.common.hours                                                               = Hours
 angal.common.minutes                                                             = Minutes
+angal.common.minutesabbr                                                         = Min
 angal.common.new                                                                 = Nouveau
 angal.common.notapplicable                                                       = NPA
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
+angal.common.patientID                                                           = Pat.ID
+angal.common.pleaseselectapatient                                                = Selectionnez un patient
 angal.common.pleaseselectarow                                                    = Prière de sèlectionner une ligne
 angal.common.quantity                                                            = Quantité
 angal.common.save                                                                = Sauve
@@ -299,6 +302,8 @@ angal.common.thiscouldretrievealargeamountofdataproceed                         
 angal.common.thisvaluecannotbegreaterthan                                        = Cette valeur ne peut pas être supérieure à 
 angal.common.thisvaluecannotbelesserthan                                         = Cette valeur ne peut pas être inférieure à 
 angal.common.to                                                                  = á
+angal.common.today                                                               = aujourd'hui
+angal.common.todaym                                                              = A'HUI:
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
 angal.common.uom.centimeter                                                      = cm
@@ -563,7 +568,7 @@ angal.labnew.pickpatient                                                        
 angal.labnew.pleaseinsertadate                                                   = Inserez une date.
 angal.labnew.pleaseinsertavalidvalue                                             = Insérez une valeur valide
 angal.labnew.pleaseselectanexam                                                  = selectionnez un Examen
-angal.labnew.pleaseselectapatient                                                = selectionnez un Patient
+angal.labnew.pleaseselectapatient                                                = Selectionnez un Patient
 angal.labnew.remove                                                              = Supprimer
 angal.labnew.result                                                              = Resultat
 angal.labnew.selectamaterial                                                     = Selectionnez un Material
@@ -741,7 +746,7 @@ angal.medicalstock.multipledischarging.outofstock                               
 angal.medicalstock.multipledischarging.packets                                   = Packets
 angal.medicalstock.multipledischarging.pleaseinsertareferencenumber              = Please insert a reference number
 angal.medicalstock.multipledischarging.pleaseinsertavalidvalue                   = Insérez une valeur valide
-angal.medicalstock.multipledischarging.pleaseselectaward                         = please select a ward
+angal.medicalstock.multipledischarging.pleaseselectaward                         = Sélectionnez un département
 angal.medicalstock.multipledischarging.preparationdate                           = Preparation Date:
 angal.medicalstock.multipledischarging.proceed                                   = , proceed?
 angal.medicalstock.multipledischarging.qty                                       = Qté
@@ -831,7 +836,7 @@ angal.medicalstockward.rectify.reason                                           
 angal.medicalstockward.rectify.title                                             = Rectify
 angal.medicalstockward.report                                                    = Rapport
 angal.medicalstockward.reset                                                     = Reinitialiser
-angal.medicalstockward.selectaward                                               = <selectionnez une garde>
+angal.medicalstockward.selectaward                                               = <selectionnez un département>
 angal.medicalstockward.sex                                                       = Sexe
 angal.medicalstockward.stockcard                                                 = BinCard
 angal.medicalstockward.title                                                     = Garde Pharmacie
@@ -863,7 +868,7 @@ angal.medicalstockwardedit.pleaseinsertadescriptionfortheinternaluse            
 angal.medicalstockwardedit.pleaseinsertavalidquantity                            = Inserez une  quantité valide
 angal.medicalstockwardedit.pleaseselectadrug                                     = Selectionez un medicamentdrug
 angal.medicalstockwardedit.pleaseselectanitem                                    = Selectionnez un item
-angal.medicalstockwardedit.pleaseselectapatient                                  = selectionnez un patient
+angal.medicalstockwardedit.pleaseselectapatient                                  = Selectionnez un patient
 angal.medicalstockwardedit.productalreadyinserted                                = Product already inserted
 angal.medicalstockwardedit.removeitem                                            = Removez Item
 angal.medicalstockwardedit.selectadrug                                           = Selectionnez une medicine
@@ -1703,6 +1708,8 @@ angal.video.resumestream                                                        
 angal.video.setfullscreen                                                        = Modalitè a tout écran
 angal.video.shootaphoto                                                          = Faire une photo
 angal.visit.reminderm                                                            = REMINDER
+angal.visit.selectaward                                                          = Selectionnez un département
+angal.visit.visits                                                               = Visits
 angal.ward.beds                                                                  = LITS
 angal.ward.bedsedit                                                              = Numéro de lits *
 angal.ward.bedsnumbermustbepositive                                              = le numéro des lits doit être positif
