--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -287,11 +287,14 @@ angal.common.excel                                                              
 angal.common.from                                                                = Da
 angal.common.hours                                                               = Ore
 angal.common.minutes                                                             = Minuti
+angal.common.minutesabbr                                                         = Min
 angal.common.new                                                                 = Nuovo
 angal.common.nodatatoshow                                                        = Nessun dato da mostrare
 angal.common.notapplicable                                                       = N/A
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
+angal.common.patientID                                                           = Pat.ID
+angal.common.pleaseselectapatient                                                = Selezionare un paziente
 angal.common.pleaseselectarow                                                    = Prego selezionare una riga
 angal.common.quantity                                                            = Quantità
 angal.common.save                                                                = Salva
@@ -300,6 +303,8 @@ angal.common.thiscouldretrievealargeamountofdataproceed                         
 angal.common.thisvaluecannotbegreaterthan                                        = Questo valore non può essere superiore a 
 angal.common.thisvaluecannotbelesserthan                                         = Questo valore non può essere inferiore a 
 angal.common.to                                                                  = A
+angal.common.today                                                               = Oggi
+angal.common.todaym                                                              = OGGI:
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
 angal.common.uom.centimeter                                                      = cm
@@ -1718,7 +1723,12 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Riprendi flusso
 angal.video.setfullscreen                                                        = Modalità schermo intero
 angal.video.shootaphoto                                                          = Scatta una foto
+angal.visit.gotodate                                                             = Vai alla data
+angal.visit.nextabbr                                                             = Succ.
+angal.visit.previousabbr                                                         = Prec.
 angal.visit.reminderm                                                            = PROMEMORIA
+angal.visit.selectaward                                                          = Selezionare un reparto
+angal.visit.visits                                                               = Visite
 angal.ward.beds                                                                  = LETTI
 angal.ward.bedsedit                                                              = Numero di letti *
 angal.ward.bedsnumbermustbepositive                                              = Il numero dei letti deve essere positivo
