--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -1,33 +1,33 @@
 
-angal.admission.abortdate                                                        = 退出日期
-angal.admission.address                                                          = 地址
-angal.admission.addressm                                                         = 地址
-angal.admission.admitted                                                         = 收治
-angal.admission.age                                                              = 年龄
-angal.admission.agem                                                             = 年龄
-angal.admission.alreadyexists                                                    = 已经存在
-angal.admission.and                                                              = 和
-angal.admission.beddays                                                          = 床天数
-angal.admission.bill                                                             = 账单
-angal.admission.bloodtype                                                        = 血型
-angal.admission.bloodtypeis                                                      = 血型是
-angal.admission.bloodtypeisunknown                                               = 未知
-angal.admission.cannotmergewithpendingbills                                      = 无法与挂起的票据合并
+angal.admission.abortdate                                                        = éåºæ¥æ
+angal.admission.address                                                          = å°å
+angal.admission.addressm                                                         = å°å
+angal.admission.admitted                                                         = æ¶æ²»
+angal.admission.age                                                              = å¹´é¾
+angal.admission.agem                                                             = å¹´é¾
+angal.admission.alreadyexists                                                    = å·²ç»å­å¨
+angal.admission.and                                                              = å
+angal.admission.beddays                                                          = åºå¤©æ°
+angal.admission.bill                                                             = è´¦å
+angal.admission.bloodtype                                                        = è¡å
+angal.admission.bloodtypeis                                                      = è¡åæ¯
+angal.admission.bloodtypeisunknown                                               = æªç¥
+angal.admission.cannotmergewithpendingbills                                      = æ æ³ä¸æèµ·çç¥¨æ®åå¹¶
 angal.admission.check.operationdate                                              = Please check the operations dates
-angal.admission.city                                                             = 城市
-angal.admission.continue                                                         = 继续?
-angal.admission.controldaten2controldaten1notfound                               = 控制日期 n.2: 控制日期 n.1 找不到
-angal.admission.controln1date                                                    = 控制 n.1 日期
-angal.admission.controln1datenodeliverydatefound                                 = 控制 n.1 日期: 未找到交货日期
-angal.admission.controln2date                                                    = 控制 n.2 日期
-angal.admission.count                                                            = 计数
-angal.admission.data                                                             = 数据
-angal.admission.deleteselectedopd                                                = 删除选定的OPD?
-angal.admission.delivery                                                         = 康复（Delivery)
-angal.admission.deliverydate                                                     = 康复（Delivery)日期
-angal.admission.deliveryresultype                                                = 康复（Delivery)原因及类型
-angal.admission.deliverytype                                                     = 康复（Delivery)类型
-angal.admission.diagnosis                                                        = 诊断
+angal.admission.city                                                             = åå¸
+angal.admission.continue                                                         = ç»§ç»­?
+angal.admission.controldaten2controldaten1notfound                               = æ§å¶æ¥æ n.2: æ§å¶æ¥æ n.1 æ¾ä¸å°
+angal.admission.controln1date                                                    = æ§å¶ n.1 æ¥æ
+angal.admission.controln1datenodeliverydatefound                                 = æ§å¶ n.1 æ¥æ: æªæ¾å°äº¤è´§æ¥æ
+angal.admission.controln2date                                                    = æ§å¶ n.2 æ¥æ
+angal.admission.count                                                            = è®¡æ°
+angal.admission.data                                                             = æ°æ®
+angal.admission.deleteselectedopd                                                = å é¤éå®çOPD?
+angal.admission.delivery                                                         = åº·å¤ï¼Delivery)
+angal.admission.deliverydate                                                     = åº·å¤ï¼Delivery)æ¥æ
+angal.admission.deliveryresultype                                                = åº·å¤ï¼Delivery)åå åç±»å
+angal.admission.deliverytype                                                     = åº·å¤ï¼Delivery)ç±»å
+angal.admission.diagnosis                                                        = è¯æ­
 angal.admission.diagnosisout                                                     = Diagnosis -OUT-
 angal.admission.diagnosisoutm                                                    = DIAGNOSIS OUT
 angal.admission.diagnosisoutsameasdiagnosisin                                    = Diagnosis OUT same as Diagnosis IN?
@@ -270,16 +270,21 @@ angal.common.excel                                                              
 angal.common.from                                                                = From
 angal.common.hours                                                               = Hours
 angal.common.minutes                                                             = Minutes
+angal.common.minutesabbr                                                         = Min
 angal.common.new                                                                 = New
 angal.common.notapplicable                                                       = N/A
 angal.common.notdefined                                                          = N/D
 angal.common.ok                                                                  = OK
+angal.common.patientID                                                           = Pat.ID
+angal.common.pleaseselectapatient                                                = 请选择一个病人
 angal.common.pleaseselectarow                                                    = Please select a row
 angal.common.quantity                                                            = Quantity
 angal.common.save                                                                = Save
 angal.common.savem                                                               = SAVE
 angal.common.thiscouldretrievealargeamountofdataproceed                          = This could retrieve a large amount of data, proceed?
 angal.common.to                                                                  = To
+angal.common.today                                                               = Today
+angal.common.todaym                                                              = TODAY:
 angal.common.uom.kg                                                              = kg
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
@@ -686,7 +691,7 @@ angal.medicalstock.multipledischarging.outofstock                               
 angal.medicalstock.multipledischarging.packets                                   = Packets
 angal.medicalstock.multipledischarging.pleaseinsertareferencenumber              = Please insert a reference number
 angal.medicalstock.multipledischarging.pleaseinsertavalidvalue                   = Insert a valid value
-angal.medicalstock.multipledischarging.pleaseselectaward                         = please select a ward
+angal.medicalstock.multipledischarging.pleaseselectaward                         = 请选择一个病房
 angal.medicalstock.multipledischarging.preparationdate                           = Preparation Date:
 angal.medicalstock.multipledischarging.proceed                                   = , proceed?
 angal.medicalstock.multipledischarging.qty                                       = Qty
@@ -776,7 +781,7 @@ angal.medicalstockward.rectify.reason                                           
 angal.medicalstockward.rectify.title                                             = Rectify
 angal.medicalstockward.report                                                    = Report
 angal.medicalstockward.reset                                                     = Reset
-angal.medicalstockward.selectaward                                               = <select a ward>
+angal.medicalstockward.selectaward                                               = <请选择一个病房>
 angal.medicalstockward.sex                                                       = Sex
 angal.medicalstockward.stockcard                                                 = StockCard
 angal.medicalstockward.title                                                     = WardPharmacy
@@ -1624,6 +1629,8 @@ angal.video.resumestream                                                        
 angal.video.setfullscreen                                                        = Set fullscreen mode
 angal.video.shootaphoto                                                          = Take a picture
 angal.visit.reminderm                                                            = REMINDER
+angal.visit.selectaward                                                          = 请选择一个病房
+angal.visit.visits                                                               = Visits
 angal.ward.beds                                                                  = BEDS
 angal.ward.bedsedit                                                              = Number of beds *
 angal.ward.bedsnumbermustbepositive                                              = Beds number must be positive
