OP-158 Removed OPDOPERATION flag, it will be managed by MENUITEM entries

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -1185,6 +1185,7 @@ angal.opd.opdnumber                                                             
 angal.opd.opdnumberalreadyexist                                                  = OPD No. already exists
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = قسم خروج المرضى OPD
+angal.opd.operation                                                              = العملية
 angal.opd.patient                                                                = OH المريض
 angal.opd.patientid                                                              = رقم تعريف المريض
 angal.opd.patientsearch                                                          = بحث
