--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -1178,6 +1178,7 @@ angal.opd.opdnumber                                                             
 angal.opd.opdnumberalreadyexist                                                  = OPD No. already exists
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = OPD Abteilung der Entlassung
+angal.opd.operation                                                              = Eingriff
 angal.opd.patient                                                                = OH Patient
 angal.opd.patientid                                                              = Pat.ID
 angal.opd.patientsearch                                                          = Search
