--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1179,6 +1179,7 @@ angal.opd.opdnumber                                                             
 angal.opd.opdnumberalreadyexist                                                  = No. OPD ya existe
 angal.opd.opdnumbermustbeanumber                                                 = No. OPD debe ser un número
 angal.opd.opdoutpatientdepartment                                                = OPD Departamento Egreso Paciente
+angal.opd.operation                                                              = INTERVENCIÓN
 angal.opd.patient                                                                = OH PACIENTE
 angal.opd.patientid                                                              = Id. Pac.
 angal.opd.patientsearch                                                          = Buscar
