--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1185,6 +1185,7 @@ angal.opd.opdnumber                                                             
 angal.opd.opdnumberalreadyexist                                                  = OPD No. already exists
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = DDP Département Dimission patient
+angal.opd.operation                                                              = Intervention
 angal.opd.patient                                                                = patient
 angal.opd.patientid                                                              = Pat.ID
 angal.opd.patientsearch                                                          = cHERCHEZ
