--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1200,6 +1200,7 @@ angal.opd.opdnumber                                                             
 angal.opd.opdnumberalreadyexist                                                  = Numero OPD già presente
 angal.opd.opdnumbermustbeanumber                                                 = Il numero OPD deve essere un intero positivo
 angal.opd.opdoutpatientdepartment                                                = OPD - Ambulatori
+angal.opd.operation                                                              = Intervento
 angal.opd.patient                                                                = OH PAZIENTE
 angal.opd.patientid                                                              = Pat.ID
 angal.opd.patientsearch                                                          = Cerca
