--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -1176,6 +1176,7 @@ angal.opd.opdnumber                                                             
 angal.opd.opdnumberalreadyexist                                                  = OPD No. already exists
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = Departamento de paciente OPD Out
+angal.opd.operation                                                              = OPERAÇÃO
 angal.opd.patient                                                                = Patient
 angal.opd.patientid                                                              = ID Pac.
 angal.opd.patientsearch                                                          = Pesquisa
