--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -1176,6 +1176,7 @@ angal.opd.opdnumber                                                             
 angal.opd.opdnumberalreadyexist                                                  = OPD No. already exists
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = OPD Kitengo cha wagonjwa waliolazwa
+angal.opd.operation                                                              = Upasuaji
 angal.opd.patient                                                                = OH Mgonjwa
 angal.opd.patientid                                                              = Mgonjwa.ID
 angal.opd.patientsearch                                                          = Tafuta
