--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -1130,6 +1130,7 @@ angal.opd.opdnumber                                                             
 angal.opd.opdnumberalreadyexist                                                  = OPD No. already exists
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = OPD Out Patient Department
+angal.opd.operation                                                              = Operation
 angal.opd.patient                                                                = OH Patient
 angal.opd.patientid                                                              = Pat.ID
 angal.opd.patientsearch                                                          = Search
