Fixed typo in language_en.properties

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -851,7 +851,7 @@ angal.medicalstockward.invalidquantitypleasetryagain                            
 angal.medicalstockward.lotnumberabb                                              = Lot No.
 angal.medicalstockward.male                                                      = Male
 angal.medicalstockward.medical                                                   = Medical
-angal.medicalstockward.newlot                                                    = New a Lot
+angal.medicalstockward.newlot                                                    = New Lot
 angal.medicalstockward.outcome.destination                                       = Patient/Destination
 angal.medicalstockward.outcomes                                                  = Outcomes
 angal.medicalstockward.packets                                                   = packets
