Removing height and weight transient properties
in order to simplify Patient’s entity and to retrieve his/her weight
only when needed

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -925,6 +925,7 @@ angal.medicalstockwardedit.pleaseinsertavalidquantity                           
 angal.medicalstockwardedit.pleaseselectadrug                                     = Please Select a drug
 angal.medicalstockwardedit.pleaseselectanitem                                    = Please select an item
 angal.medicalstockwardedit.pleaseselectapatient                                  = Please select a patient
+angal.medicalstockwardedit.problemoccurredwhileretrievingweight                  = A problem occurred while retrieving patient's weight
 angal.medicalstockwardedit.productalreadyinserted                                = Product already inserted
 angal.medicalstockwardedit.removeitem                                            = Remove Item
 angal.medicalstockwardedit.selectadrug                                           = Select a drug
