--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -867,6 +867,7 @@ angal.medicalstockwardedit.pleaseinsertavalidquantity                           
 angal.medicalstockwardedit.pleaseselectadrug                                     = Seleccionar un fármaco
 angal.medicalstockwardedit.pleaseselectanitem                                    = Seleccionar un elemento
 angal.medicalstockwardedit.pleaseselectapatient                                  = Seleccionar un paciente
+angal.medicalstockwardedit.problemoccurredwhileretrievingweight                  = Ocurrió un problema al recuperar el peso del paciente
 angal.medicalstockwardedit.productalreadyinserted                                = Producto ya ingresado
 angal.medicalstockwardedit.removeitem                                            = Remover Elemento
 angal.medicalstockwardedit.selectadrug                                           = <seleccionar un fármaco>
