--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -871,6 +871,7 @@ angal.medicalstockwardedit.pleaseinsertavalidquantity                           
 angal.medicalstockwardedit.pleaseselectadrug                                     = Selectionez un medicamentdrug
 angal.medicalstockwardedit.pleaseselectanitem                                    = Selectionnez un item
 angal.medicalstockwardedit.pleaseselectapatient                                  = Selectionnez un patient
+angal.medicalstockwardedit.problemoccurredwhileretrievingweight                  = Un problème est survenu lors de la récupération du poids du patient
 angal.medicalstockwardedit.productalreadyinserted                                = Product already inserted
 angal.medicalstockwardedit.removeitem                                            = Removez Item
 angal.medicalstockwardedit.selectadrug                                           = Selectionnez une medicine
