--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -925,6 +925,7 @@ angal.medicalstockwardedit.pleaseinsertavalidquantity                           
 angal.medicalstockwardedit.pleaseselectadrug                                     = Selezionare un farmaco
 angal.medicalstockwardedit.pleaseselectanitem                                    = Selezionare un elemento
 angal.medicalstockwardedit.pleaseselectapatient                                  = Selezionare un paziente
+angal.medicalstockwardedit.problemoccurredwhileretrievingweight                  = Si è verificato un problema durante il recupero del peso del paziente
 angal.medicalstockwardedit.productalreadyinserted                                = Prodotto già inserito
 angal.medicalstockwardedit.removeitem                                            = Rimuovi Elemento
 angal.medicalstockwardedit.selectadrug                                           = <seleziona un farmaco>
