--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -864,6 +864,7 @@ angal.medicalstockwardedit.pleaseinsertavalidquantity                           
 angal.medicalstockwardedit.pleaseselectadrug                                     = Por favor, selecione uma droga
 angal.medicalstockwardedit.pleaseselectanitem                                    = Por favor selecione um item
 angal.medicalstockwardedit.pleaseselectapatient                                  = Por favor selecione um paciente
+angal.medicalstockwardedit.problemoccurredwhileretrievingweight                  = Ocorreu um problema ao recuperar o peso do paciente
 angal.medicalstockwardedit.productalreadyinserted                                = Product already inserted
 angal.medicalstockwardedit.removeitem                                            = Remover Item
 angal.medicalstockwardedit.selectadrug                                           = Selecione uma droga
