--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -864,6 +864,7 @@ angal.medicalstockwardedit.pleaseinsertavalidquantity                           
 angal.medicalstockwardedit.pleaseselectadrug                                     = Tafadhali chagua dawa
 angal.medicalstockwardedit.pleaseselectanitem                                    = Tafadhali chagua bidhaa moja
 angal.medicalstockwardedit.pleaseselectapatient                                  = Tafadhali chagua mgonjwa mmoja
+angal.medicalstockwardedit.problemoccurredwhileretrievingweight                  = Shida ilitokea wakati wa kupata uzito wa mgonjwa
 angal.medicalstockwardedit.productalreadyinserted                                = Product already inserted
 angal.medicalstockwardedit.removeitem                                            = Ondoa Bidhaa
 angal.medicalstockwardedit.selectadrug                                           = Chagua dawa
